src/objects/Satisfaction_Survey_Question__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Boolean_Answer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Full_Question_Text__c</fullName>
        <label>Full Question Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Satisfaction_Survey__c</fullName>
        <label>Satisfaction Survey</label>
        <referenceTo>Satisfaction_Survey__c</referenceTo>
        <relationshipLabel>Satisfaction Survey Questions</relationshipLabel>
        <relationshipName>Satisfaction_Survey_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Survey_Order_Patient_EXT_ID__c</fullName>
        <externalId>true</externalId>
        <label>Survey Order Patient EXT ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Satisfaction Survey Question</label>
    <nameField>
        <label>Satisfaction Survey Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Satisfaction Survey Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>